<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AddProductsFragment">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnBack"
                    android:layout_width="36dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_back_button" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="24dp"
                    android:gravity="center"
                    android:text="@string/edit_product"
                    android:textColor="@color/main_color"
                    android:textSize="22dp" />


            </LinearLayout>
        </Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxStrokeColor="@color/main_color"
                        app:hintTextColor="@color/main_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etProductName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/product_name"
                            android:inputType="text"
                            android:textSize="16dp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="wrap_content"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginVertical="4dp"
                            app:boxBackgroundMode="outline"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp"
                            android:layout_marginEnd="4dp"
                            app:boxStrokeColor="@color/main_color"
                            app:hintTextColor="@color/main_color">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/etBarCode"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:hint="@string/bar_code"
                                android:textSize="16dp" />


                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:id="@+id/scan_bar_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:padding="9dp"
                            android:layout_marginTop="2.2dp"
                            android:layout_marginStart="4dp"
                            android:background="@drawable/bg_bar_code">

                            <ImageView
                                android:layout_width="36dp"
                                android:layout_height="36dp"
                                android:src="@drawable/ic_barcode"/>
                        </LinearLayout>



                    </LinearLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxStrokeColor="@color/main_color"
                        app:hintTextColor="@color/main_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPrice"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/price"
                            android:inputType="number"
                            android:textSize="16dp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxStrokeColor="@color/main_color"
                        app:hintTextColor="@color/main_color"
                        app:boxCornerRadiusTopStart="12dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/amount"
                            android:inputType="number"
                            android:textSize="16dp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxStrokeColor="@color/main_color"
                        app:hintTextColor="@color/main_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etTotal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/total"
                            android:inputType="number"
                            android:textSize="16dp" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="12dp"
                        app:boxCornerRadiusBottomStart="12dp"
                        app:boxCornerRadiusTopEnd="12dp"
                        app:boxCornerRadiusTopStart="12dp"
                        app:boxStrokeColor="@color/main_color"
                        app:hintTextColor="@color/main_color">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etDescription"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/description"
                            android:inputType="text"
                            android:textSize="16dp" />


                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_margin="16dp"
                    android:backgroundTint="@color/main_color"
                    android:text="@string/save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:cornerRadius="10dp" />
            </LinearLayout>
        </LinearLayout>
        <include
            android:id="@+id/loading"
            android:visibility="gone"
            layout="@layout/loading"/>
    </FrameLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>